alignitems fix

--- a/src/components/OpenJobs/OpenJobs.module.scss
+++ b/src/components/OpenJobs/OpenJobs.module.scss
@@ -30,6 +30,7 @@
                 }
                 .buttonIcon {
                     display: flex;
+                    align-items: center;
                 }
             }
         }
@@ -39,6 +40,7 @@
             border-bottom: 4px solid $main-green;
             .iconContainer {
                 display: flex;
+                align-items: center;
             }
             .jobLocation {
                 margin-left: 10px;
